--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
-          <p class="text-center">郊外にある、歴史も古い小学校・・・<br>
-            いつの間にか、放課後に図工室から奇妙な叫び声が聞こえてくるという噂が流れ始めた。<br>
-            調査したが、噂の出どころはわからない。<br>
-            そんな矢先、某有名預言者ノストラエヌスが、「このままだと図工室が原因で、学校が滅びるだろう」と予言。<br>
+          <p class="text-center">旅行する前日、旅行先のことを調べていると、急に気を失ってしまった。<br>
+            気がつくとそこはpcの中だった。<br>
+            ここはテーマパークのHPらしい。<br>
+            未知のウイルスによって閉じ込められてしまったようだ。<br>
             生徒に人気のS先生が一人で調査に入ったが、いつまでも帰ってこない。<br>
-            不思議に思った生徒会長の君は、副会長の伊計島太郎と茨つくはの<br>
-            ２名を連れて家庭科室の前に来たが、ドアが開かない。<br>
+            そして35分の制限時間が表示された。<br>
+            旅行に行くために脱出しなければ！！！！<br>
             さらにドアの前に画面とキーボードが。どうやら暗号を入力しろということらしい。</p>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
