--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
-          <p class="text-center">旅行する前日、旅行先のことを調べていると、急に気を失ってしまった。<br>
-            気がつくとそこはpcの中だった。<br>
-            ここはテーマパークのHPらしい。<br>
-            未知のウイルスによって閉じ込められてしまったようだ。<br>
-            生徒に人気のS先生が一人で調査に入ったが、いつまでも帰ってこない。<br>
-            そして35分の制限時間が表示された。<br>
-            旅行に行くために脱出しなければ！！！！<br>
+          <p class="text-center">私は明日旅行をする。とても楽しみだ。<br>
+            旅行先を先に調べておこう！！そうして私は旅行先を調べていると突然眠気も襲われ寝てしまった。<br>
+            「ここは...？」私は目が覚めると見覚えのあるところにいた。<br>
+            明日行く遊園地に似ている。しかし普通の遊園地にはないような物がある。<br>
+            どうやらここはpcの中、遊園地のサイトのようだ。。<br>
+            このいきなりの状況に私は理解できなかった<br>
+            「とりあえず早く脱出しなきゃ!!!」私は旅行に行くために脱出計画を始めた。<br>
             さらにドアの前に画面とキーボードが。どうやら暗号を入力しろということらしい。</p>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
@@ -43,8 +43,8 @@
               <li>完全にウイルスに侵食される前に脱出しなければいけない</li>
             </ul>
           </div>
-          <p class="text-center">いつの間にか、タイマーが起動した。29:58、29:57・・・急がなきゃ。<br>
-            まずはこの暗号を解かなくては！</p>
+          <p class="text-center">いつの間にか、謎のカウントダウンが始まった。どうやらこのカウントダウンはウイルスによるもののようだ。<br>
+            早く脱出をしなければ！</p>
         </div>
       </div>
     </section>
