--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
               <li>制限時間は35分</li>
-              <li>完全にウイルスに侵食される前に脱出しなければいけない</li>
+              <li>３５分以内に脱出しなければいけない</li>
             </ul>
           </div>
-          <p class="text-center">いつの間にか、謎のカウントダウンが始まった。どうやらこのカウントダウンはウイルスによるもののようだ。<br>
+          <p class="text-center">いつの間にか、謎のカウントダウンが始まった。<br>
             早く脱出をしなければ！</p>
         </div>
       </div>
