--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             どうやらここはpcの中、遊園地のサイトのようだ。。<br>
             このいきなりの状況に私は理解できなかった<br>
             「とりあえず早く脱出しなきゃ!!!」私は旅行に行くために脱出計画を始めた。<br>
-            さらにドアの前に画面とキーボードが。どうやら暗号を入力しろということらしい。</p>
+            遊園地のサイトを探索しているとパスワードを入力するところを見つけた。</p>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
               <li>制限時間は35分</li>
