--- a/main.html
+++ b/main.html
@@ -108,9 +108,9 @@ Youtube貼り付けここまで -->
           <div class="section">
             <div class="container">
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>黒板に書かれている謎を解け！</h2>
-              <p class="text-center">家庭科室に入ることができた！<br>
-                すぐに目に入ったのは黒板にある４つの謎。<br>
-                これらを解くことで、きっと次のステップに繋がるはずだ！</p>
+              <p class="text-center">飛ばされたツアーのサイトを探索していると再び謎を見つけた。<br>
+                どうやらこの謎を解かないと先に進めないようだ。<br>
+                だんだんサイトがバグり始めている。急いで脱出しなければ！</p>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
