--- a/main.html
+++ b/main.html
@@ -107,7 +107,7 @@ Youtube貼り付けここまで -->
         <section>
           <div class="section">
             <div class="container">
-              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>黒板に書かれている謎を解け！</h2>
+              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>謎を解け！</h2>
               <p class="text-center">飛ばされたツアーのサイトを探索していると再び謎を見つけた。<br>
                 どうやらこの謎を解かないと先に進めないようだ。<br>
                 だんだんサイトがバグり始めている。急いで脱出しなければ！</p>
