--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>からの脱出〜データが消える前に脱出しろ〜 │ Project N</title>
+  <title>パソコンからの脱出〜データが消える前に脱出しろ〜 │ Project N</title>
   <link rel="stylesheet" href="assets/css/normalize.css">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -23,7 +23,7 @@
   </header>
   <main class="main main-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/main-image.png" alt="封鎖された家庭科室からの脱出"></h1>
+    <h1 class="main-title"><img src="assets/images/main-image.png" alt="パソコンからの脱出〜データが消える前に脱出しろ〜"></h1>
     <!-- タイトルエリア　ここまで -->
     <div id="stage">
 
