--- a/main.html
+++ b/main.html
@@ -86,9 +86,9 @@ Youtube貼り付けここまで -->
             <div class="clear-message">
               <div class="clear-message__title">STAGE：１  クリア！</div>
               <div class="clear-message__content">クリアするとツアーのサイトに飛ばされてしまった！<br>
-                さぁ脱出するため<br>
-                あああああ<br>
-                謎をとき、暗号を見つけ出そう！</div>
+                「」<br>
+                ウイルスにデータを消される前に早く謎を解いて脱出しなければ！<br>
+                下の画像の謎を解き、キーワード欄に入力しよう。</div>
               <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
