--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
   </header>
   <main class="main main-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/784BA2B2-8BCF-4C26-9174-29AABD2B04DF_1_105_c.jpeg" alt="パソコンからの脱出〜データが消える前に脱出しろ〜"></h1>
+    <h1 class="main-title"><img src="assets/images/脱出.png" alt="パソコンからの脱出〜データが消える前に脱出しろ〜"></h1>
     <!-- タイトルエリア　ここまで -->
     <div id="stage">
 
