--- a/main.html
+++ b/main.html
@@ -40,7 +40,7 @@
   
             <div class="container">
               <figure class="image__container">
-                <img src="assets/images/nazo1.png" alt="">
+                <img src="assets/images/謎１.png" alt="">
               </figure>
                 
  <!--  YouTube貼り付け
@@ -131,7 +131,7 @@ Youtube貼り付けここまで -->
                 <div class="column">
                   <!-- STAGE2-1問題セクション　ここから -->
                   <figure class="image__container">
-                    <img src="assets/images/nazo2.png" alt="">
+                    <img src="assets/images/謎２.png" alt="">
                   </figure>
                   <!-- STAGE2-1問題セクション　ここまで -->
                   <!-- STAGE2-1解答入力セクション　ここから -->
