--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
   </header>
   <main class="main main-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/トップ画像.png" alt="パソコンからの脱出〜データが消える前に脱出しろ〜"></h1>
+    <h1 class="main-title"><img src="assets/images/トップ画像.png" alt="パソコンからの脱出〜データが消える前に脱出しろ〜"></h1>
     <!-- タイトルエリア　ここまで -->
     <div id="stage">
 
