--- a/index.html
+++ b/index.html
@@ -29,22 +29,26 @@
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
-          <p class="text-center">私は明日旅行をする。とても楽しみだ。<br>
-            旅行先を先に調べておこう！！そうして私は旅行先を調べていると突然眠気も襲われ寝てしまった。<br>
-            「ここは...？」私は目が覚めると見覚えのあるところにいた。<br>
-            明日行く遊園地に似ている。しかし普通の遊園地にはないような物がある。<br>
-            どうやらここはpcの中、遊園地のサイトのようだ。。<br>
-            このいきなりの状況に私は理解できなかった<br>
-            「とりあえず早く脱出しなきゃ!!!」私は旅行に行くために脱出計画を始めた。<br>
-            遊園地のサイトを探索しているとパスワードを入力するところを見つけた。</p>
+          <p class="text-center">私は(名前)。明日は待ちに待った旅行の日、とても楽しみだ。<br>
+            事前に旅行先について調べておこう！<br>
+            そうしてPCで旅行先を調べていたのだが、突然眠気に襲われ眠ってしまった。<br>
+            「ここはどこだ…？」<br>
+            ふと目が覚めると、寝てしまった時にいた部屋とは違う…なんとなく見覚えのある場所にいた。<br>
+            明日行く遊園地に似ているが、普通の遊園地にはないような物がある。<br>
+            辺りを探索してみたが、やはり「普通の遊園地」ではない気がする。<br>
+            ……どうやらここはpcの中、私は遊園地のサイトにいるらしい。<br>
+            いきなりの状況に、私は全く理解できなかった<br>
+            「とにかくここから出なければ、旅行に行けなくなってしまう！」<br>
+            明日の旅行に行くため、私はこのPCの中から脱出しようと試みるのだった。<br>
+            遊園地のサイトを探索していると、ふと目の前にホログラムが出現した</p>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
               <li>制限時間は35分</li>
-              <li>35分以内に脱出しなければいけない</li>
+              <li>時間内に脱出しなければ、あなたはここから出ることができなくなるだろう。</li>
             </ul>
           </div>
-          <p class="text-center">いつの間にか、謎のカウントダウンが始まった。<br>
-            早く脱出をしなければ！</p>
+          <p class="text-center">いつの間にか、謎のカウントダウンが始まってしまった。<br>
+            n兄がなんだかわからないが、とにかく早く脱出をしなければ！</p>
         </div>
       </div>
     </section>
@@ -116,7 +120,7 @@
     </section>
     <section class="section">
       <div class="container">
-        <a class="btn" href="main.html">準備OK？では、ゲームスタート！！！<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></a>
+        <a class="btn" href="main.html">Are you ready?<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></a>
       </div>
     </section>
   </main>
