--- a/main.html
+++ b/main.html
@@ -34,9 +34,16 @@
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>さぁゲームを始めよう！</h2>
-            <p class="text-center">引き続きサイトを探索していると謎の画像を見つけた。<br>
-              下の画像の謎を解き、キーワード欄に入力しよう。</p>
-            <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
+            <p class="text-center">遊園地のサイト内を探索しているが、まるで出られそうになかった。<br>
+              前のページに戻ったり他のサイトに飛ぶことが出来ず、完全にサイト内に閉じ込められてしまっている…<br>
+              それでも諦めずに探索していると、明らかにこのサイトのものではない謎の画像を見つけた。<br>
+              「かんきこう」、「いちらん」、「しゃしん」…何かの暗号だろうか。<br>
+              ■を並べて出てくる単語…なるほど、これは謎解きのようだ。<br>
+              よく見れば、画像の下にこの謎解きの答えを入力するところがある。<br>
+              この謎がここから脱出するための鍵になるかはわからないが、<br>
+              この状況ではこの謎を解く以外に為す術がない。<br>
+              謎を解き、キーワード欄に入力してみよう。もしかしたら、ここから出るヒントになるかもしれない。</p>
+            <p class="text-center">※困ったときはヒントがあるが、なるべく見ないようにゲームを進めていこう。</p>
   
             <div class="container">
               <figure class="image__container">
@@ -85,10 +92,17 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：１  クリア！</div>
-              <div class="clear-message__content">クリアするとツアーのサイトに飛ばされてしまった！<br>
-                「」<br>
-                ウイルスにデータを消される前に早く謎を解いて脱出しなければ！<br>
-                下の画像の謎を解き、キーワード欄に入力しよう。</div>
+              <div class="clear-message__content">謎を解きキーワード欄に入力すると、
+                突如現れたホログラムに「おめでとう！」という文字が表示され、眩い光に包まれた。<br>
+                「うわっ！」と思わず声を上げて目を瞑る。<br>
+                しばらくして目を開けると、別のサイトに飛ばされていた。<br>
+                「次はどこなんだ…」<br>
+                辺りを見渡してみたが、どうやらツアーサイトのようだ。<br>
+                よく見ればところどころ文字化けしていたり、画像がうまく表示されておらず、<br>
+                「あなたのPCのデータがウイルスによって消されようとしています！」という警告が出ていた。<br>
+                私のPCがウイルスに！？だとしたら、サイトから出られないのもこの謎解きも全てウイルスのせいなのだろうか…？<br>
+                真相は計り知れないが、何よりウイルスにデータを消されてしまっては私が消えてしまうかもしれない！<br>
+                それだけは絶対に許されない、なんとしてでもここからいち早く脱出しなければ！</div>
               <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
@@ -108,9 +122,11 @@ Youtube貼り付けここまで -->
           <div class="section">
             <div class="container">
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>謎を解け！</h2>
-              <p class="text-center">飛ばされたツアーのサイトを探索していると再び謎を見つけた。<br>
-                どうやらこの謎を解かないと先に進めないようだ。<br>
-                だんだんサイトがバグり始めている。急いで脱出しなければ！</p>
+              <p class="text-center">急いで探索していると、またしても怪しげな画像を見つけた。<br>
+                先ほどと同じように謎を解けば良いのだろうか…？<br>
+                この謎を解いて脱出できる保証はないが、謎を解く以外に今は方法がない<br>
+                残り時間もそんなに多くは残されていないし、何よりサイトの文字も正常に読むことが困難になってきている。<br>
+                ウイルスに完全位侵食されてしまう前に、急いで脱出しなければ！</p>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
