--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </ul>
           </div>
           <p class="text-center">いつの間にか、謎のカウントダウンが始まってしまった。<br>
-            n兄がなんだかわからないが、とにかく早く脱出をしなければ！</p>
+            なにがなんだかわからないが、とにかく早く脱出をしなければ！</p>
         </div>
       </div>
     </section>
