--- a/main.html
+++ b/main.html
@@ -126,7 +126,7 @@ Youtube貼り付けここまで -->
                 先ほどと同じように謎を解けば良いのだろうか…？<br>
                 この謎を解いて脱出できる保証はないが、謎を解く以外に今は方法がない<br>
                 残り時間もそんなに多くは残されていないし、何よりサイトの文字も正常に読むことが困難になってきている。<br>
-                ウイルスに完全位侵食されてしまう前に、急いで脱出しなければ！</p>
+                ウイルスに完全に侵食されてしまう前に、急いで脱出しなければ！</p>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
