--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <div class="container">
       <div class="header__name">N・S高生制作サイト</div>
         <div class="header__logo">
-          <img src="assets/images/logo.svg" alt="チームロゴ"></div>
+      <img src="assets/images/logo.svg" alt="チームロゴ">
+      </div>
       </div>
   </header>
   <main class="main index-page">
