--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
   </svg>
   <header class="header">
     <div class="container">
-       <div class="header__logo">
-          <img src="assets/images/logo.svg" alt="チームロゴ">
-       </div>
+      <div class="header__logo"><img src="assets/images/logo.svg" alt="チームロゴ"></div>
       <div class="header__name">N・S高生制作サイト</div>
-      </div>
+    </div>
   </header>
   <main class="main index-page">
     <!-- タイトルエリア　ここから -->
