--- a/main.html
+++ b/main.html
@@ -216,9 +216,17 @@ Youtube貼り付けここまで -->
         <!-- STAGE3-1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>家庭科室の課題とは</h2>
-            <p class="text-center">黒板から得たメッセージは、「食物の廃棄問題」だった。<br>
-              どうやら、廃棄にかかる費用がかかりすぎて小学校の運営が厳しくなったようだ。。<br>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>最後の謎を解け</h2>
+            <p class="text-center">案の定謎の書いてある画像を見つけ、謎を解こうとしたところで背後から声が聞こえた<br>
+              「そんなことしたってPCからは出られないよ」<br>
+              振り返ると、自分と同じくらいの歳の子が、パーカーのフードを深く被りながら笑っていた<br>
+              PCから出られないとはどういうことだろうか。そもそもこの子は誰だ？自分と同じく、閉じ込められてしまったのだろうか。<br>
+              「君は誰だ？なんでここから出られない？出られないと断言できるのはなんでだ？」<br>
+              たくさんのことを一気に質問してしまったが、パーカーの子は嫌な顔一つせず、むしろ「それはね〜」と楽しげな口調で話し始めた<br>
+              「僕はウイルスで、君を閉じ込めたんだ。そして、僕は元々AIだからわかる…君は元の僕と同じAIだ、ってね。」<br>
+              「…え？」<br>
+              私は耳を疑った。<br>
+              「」
               これらを解決するための最後の謎を解いていこう！</p>
             <figure class="image__container">
               <img src="assets/images/stage.png" alt="">
