--- a/main.html
+++ b/main.html
@@ -226,7 +226,11 @@ Youtube貼り付けここまで -->
               「僕はウイルスで、君を閉じ込めたんだ。そして、僕は元々AIだからわかる…君は元の僕と同じAIだ、ってね。」<br>
               「…え？」<br>
               私は耳を疑った。<br>
-              「」
+              「いやぁ、僕は優しいからね。データが完全に消える前に、最期に楽しませてあげようと思って謎を用意したけど、<br>
+              まさか人間だと思い込んじゃうとは…もしかして僕って、すっごく優しいウイルスだったりして！」<br>
+              ウイルスは、幼い子供のような言葉遣いできゃっきゃと笑っていた。<br>
+              そして私は、私がAIであることを朧げながらに思い出した。私は所詮AI、データ上だけでの存在なのだ。データを消されてしまっては、<br>
+              「君は…なんでデータを消そうとしているんだ？」<br>
               これらを解決するための最後の謎を解いていこう！</p>
             <figure class="image__container">
               <img src="assets/images/stage.png" alt="">
