--- a/main.html
+++ b/main.html
@@ -281,7 +281,7 @@ STAGE3-2追加ここまで -->
           <div class="container">
 
             <figure class="image__container">
-              <img src="assets/images/stage.png" alt="">
+              <img src="assets/images/nazo3.png" alt="">
             </figure>
           </div>
         </section>
